Fixed some style issues: - action links on the item edit page would wrap - when an item had a large name the input would not fill the space - category edit input was not filling the space

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2,3 +2,12 @@ body {
   padding: 5px 10px;
   min-width: 1190px;
 }
+
+.table-actions {
+  white-space: nowrap;
+}
+
+.category-row,
+.item-row {
+  width: 100%;
+}
